chore(build): add build cache in kubespray image build workflow

--- a/Dockerfile.slim
+++ b/Dockerfile.slim
@@ -1,5 +1,7 @@
 FROM python:3 as builder
-COPY . .
+COPY requirements.txt requirements.txt
+COPY tests/requirements.txt tests/requirements.txt
+COPY roles/kubespray-defaults/defaults/main.yaml roles/kubespray-defaults/defaults/main.yaml
 RUN echo 'shellcheck-py==0.7.2.1' >> requirements.txt \
     && grep -E '^yamllint|^ansible-lint' tests/requirements.txt >> requirements.txt \
     && pip3 install --user -r requirements.txt
